--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,6 +1,39 @@
-main{
+main {
   background-image: url("../assets/hero-img.jpg");
   background-size: 100% 100%;
   width: 100%;
   height: 37rem;
+  /* width: 1440px;
+  height: 689px; */
+  gap: 0px;
+  opacity: 0px;
+}
+
+.header-text {
+  width: 633px;
+  height: 286px;
+  padding-top: 202.5px;
+  padding-left: 130px;
+  gap: 14px;
+}
+
+.headline-1 {
+  width: 571px;
+  height: 164px;
+  font-size: 60px;
+  font-weight: 700;
+  line-height: 81.72px;
+  text-align: left;
+  color: #ffffff;
+}
+
+.sub-heading {
+  width: 633px;
+  height: 108px;
+  gap: 0px;
+  opacity: 0px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 27.24px;
+  color: #ffffff;
 }
